* Mon Oct 19 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091019
- Reorganization of the descriptions of section properties and coordinate
transformation in the user manual.

* Sun Oct 18 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091018
- Expanded description of section properties and "roll angle" in the
user manual.

* Tue Sep 22 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090922
- Added flag option '-a' to display "about" information. 
- This option should be helpful to those running Frame3DD in the background,
and wishing to acknowledge Frame3DD in the "about" information of their 
software.  
- Added flag '-w' to enable writing of mass and stiffness matrices.
- Updates suggested by Barry Sanford 
- Updated user-manual.html accordingly.

* Thu Sep 17 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090917
- A warning is displayed to the screen indicating the level of average axial strain in an element whenever this strain exceeds 0.001 (0.1%) in magnitude.   Most structural materials yield at strain levels between 0.08% and 0.15%.  
- Loads in examples that are over-stressed were reduced.   
- Example files re-run.
- Update the user-manual.html reflecting these changes.

* Wed Sep 09 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090909
- Minor edit to user-manual.html 

* Tue Sep 08 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090908
- Update user-manual.html with notes on end force sign convention

* Wed Jun 24 2009 John Pye <john.pye@anu.edu.au> 0.20090624
- SoQT detection for SCons script.
- Fix error with runtime location of 'properties.txt' script.
- Fix error with arc2iv when file unable to be located.

* Wed Jun 10 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090515
- Small website tweaks ... font sizes, tabular layout,
- Trying to promote frame3dd.sourceforge.net in Google searches for '3d Frame'

* Wed Jun 3 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090515
- Changed all .frm file extensions to .3dd file extensions